--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -7,3 +7,8 @@ java {
     sourceCompatibility = JavaVersion.VERSION_17
     targetCompatibility = JavaVersion.VERSION_17
 }
+
+dependencies {
+    //inject
+    implementation 'javax.inject:javax.inject:1'
+}
