--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,18 +53,21 @@ dependencies {
     //ViewBinding
     implementation 'com.github.kirich1409:viewbindingpropertydelegate:1.5.9'
 
-    // Adaptive dimensions
+    //Adaptive dimensions
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
     implementation 'com.intuit.ssp:ssp-android:1.1.0'
 
-    // Navigation Components
+    //Navigation Components
     implementation "androidx.navigation:navigation-fragment-ktx:2.6.0"
     implementation "androidx.navigation:navigation-ui-ktx:2.6.0"
 
     //Lottie
     implementation 'com.airbnb.android:lottie:6.0.0'
 
-    // retrofit
+    //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
 }
