add dots for view pager and new color

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,7 @@ dependencies {
 
     //ViewPager2
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
+    //dots for VP
+    implementation "com.tbuonomo:dotsindicator:4.3"
 }
